--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,8 @@ dependencies {
     compile files('libs/jsoup-1.10.3.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
+    compile files('libs/picasso-2.5.2.jar')
+    compile 'com.android.support:cardview-v7:25.2.0'
 }
